--- a/build.gradle
+++ b/build.gradle
@@ -25,23 +25,39 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'com.example.emileclientcourse'
-    mainClass = 'com.example.emileclientcourse.HelloApplication'
+    mainModule = 'com.example.emailclientcourse'
+    mainClass = 'com.example.emailclientcourse.Launcher'
 }
 
 javafx {
     version = '17.0.2'
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.web']
+}
+
+repositories {
+    mavenCentral()
 }
 
 dependencies {
-    implementation('org.controlsfx:controlsfx:11.1.2')
+    implementation('com.sun.mail:javax.mail:1.6.2') {
+        exclude group: 'javax.activation'
+        exclude group: 'com.sun.activation', module: 'javax.activation'
+    }
+    implementation 'com.sun.activation:javax.activation:1.2.0'
+    implementation 'org.openjfx:javafx-controls:17'
+    implementation 'org.openjfx:javafx-fxml:17'
+    implementation 'org.openjfx:javafx-graphics:17'
+    implementation 'org.openjfx:javafx-web:17'
     implementation('com.github.almasb:fxgl:17.2') {
         exclude(group: 'org.openjfx')
     }
+    implementation 'com.google.api-client:google-api-client:2.0.0'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+    implementation 'com.google.apis:google-api-services-gmail:v1-rev20220404-2.0.0'
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
 }
 
 test {
